need extension to request image/texture not use data dependent compression
Compressed formats can be used as a side-channel attack. There are some scenarios where a browser would want to request that UBWC/CCS/AFBC/etc not be used.
See: https://www.hertzbleed.com/gpu.zip/GPU-zip.pdf
Maybe something like:
glTexParameteri(GL_TEXTURE_2D, GL_ALLOW_DATA_DEPENDENT_FORMAT_MESA, GL_FALSE);
but that particular param would need to be set before glTexImage2D()
/etc. Alternative suggestions welcom.
The trivial implementation could use PIPE_BIND_LINEAR
but we should probably introduce a new bind flag to allow drivers to continue to use non-linear formats which do not have data dependent bandwidth patterns. (Ie. to not force linear in case this would trigger a resolve blit, etc).
We probably also need a vk extension.. I think you could do this already with VK_IMAGE_TILING_DRM_FORMAT_MODIFIER_EXT
but probably the app doesn't want to have to know the details of every possible modifier.. and there might not necessarily be modifiers defined for internally used tiled formats which are not normally imported/exported.